fix overflow

--- a/Web-Front-end/src/index.css
+++ b/Web-Front-end/src/index.css
@@ -295,7 +295,7 @@ body {
 
 .discuss-area {
   gap: 1rem;
-  max-height: 20rem;
+  max-height: 17rem;
   width: 50rem;
   overflow-y: auto;
 }
